--- a/FinalNotebook.Rmd
+++ b/FinalNotebook.Rmd
@@ -1,9 +1,13 @@
 ---
-title: "R Notebook"
-output: html_notebook
+title: "Bitcoin Prediction with NLP"
+output:
+  html_document: default
+  html_notebook:
+    number_sections: yes
+    theme: flatly
 ---
 
-```{r}
+```{r echo = FALSE}
 library(tidyverse)
 library(lubridate)
 library(pracma)
@@ -105,6 +109,20 @@ full_data = inner_join(full_data, bitcoin.prices)
 full_data
 ```
 
+On ajoute également le yield, qui est la variable qu'on va chercher à prédire avec certains modèles.
+```{r}
+full_data['yield'] <-( full_data['close'] - full_data['close.D1']) / full_data['close.D1']
+
+full_data['yield.D1'] <-( full_data['close.D1'] - full_data['close.D2']) / full_data['close.D2']
+```
+
+On note également le yield moyen, afin de le réintégrer plus tard à nos prédictions.
+
+```{r}
+mean_yield = mean(full_data$yield)
+```
+
+
 ## Enfin : définition des données train et test
 ```{r}
 scale_data = full_data
@@ -117,7 +135,7 @@ test_data = scale_data %>% filter(date >= ymd('2018/05/01') & date <= ymd('2018/
 # Premier modèle : régression logistique
 ## Avec toutes les variables
 ```{r}
-full.reg.model = glm(as.formula(paste0("trend ~ ", paste0(colnames(full_data)[-c(21,22)], collapse = " + "))),
+full.reg.model = glm(as.formula(paste0("trend ~ ", paste0(colnames(full_data)[-c(21,22,23)], collapse = " + "))),
                 family = "binomial",
                 data = train_data)
 
@@ -163,7 +181,7 @@ colnames(full_data)
 ```
 
 ```{r}
-fewer.reg.model = glm(as.formula(paste0("trend ~ ", paste0(colnames(full_data)[-c(1,3,5,7,8,10,14,16,18,19,21,22)], collapse = " + "))),
+fewer.reg.model = glm(as.formula(paste0("trend ~ ", paste0(colnames(full_data)[-c(1,3,5,7,8,10,14,16,18,19,21,22,23)], collapse = " + "))),
                 family = "binomial",
                 data = train_data)
 
@@ -208,7 +226,7 @@ colnames(full_data)
 ```
 
 ```{r}
-few.reg.model = glm(as.formula(paste0("trend ~ ", paste0(colnames(full_data)[-c(1,3,5,6,7,8,10,11,14,16,18,19,21,22)], collapse = " + "))),
+few.reg.model = glm(as.formula(paste0("trend ~ ", paste0(colnames(full_data)[-c(1,3,5,6,7,8,10,11,14,16,18,19,21,22,23)], collapse = " + "))),
                 family = "binomial",
                 data = train_data)
 
@@ -254,7 +272,7 @@ Malheureusement, les implémentations de Random Forest sur R ne permettent pas d
 ## Avec toutes les variables
 ```{r}
 set.seed(0)
-full.rf.model = randomForest(as.formula(paste0("trend ~ ", paste0(colnames(full_data)[-c(21,22)], collapse = " + "))),
+full.rf.model = randomForest(as.formula(paste0("trend ~ ", paste0(colnames(full_data)[-c(21,22,23)], collapse = " + "))),
                              ntree = 5000,
                              data = train_data)
 ```
@@ -268,7 +286,7 @@ On garde la même sélection de variables que sur la deuxième sous-partie de la
 
 ```{r}
 set.seed(0)
-fewer.rf.model = randomForest(as.formula(paste0("trend ~ ", paste0(colnames(full_data)[-c(1,3,5,7,8,10,14,16,18,19,21,22)], collapse = " + "))),
+fewer.rf.model = randomForest(as.formula(paste0("trend ~ ", paste0(colnames(full_data)[-c(1,3,5,7,8,10,14,16,18,19,21,22,23)], collapse = " + "))),
                              ntree = 5000, mtry = 6, nodesize = 1,
                              data = train_data)
 ```
@@ -284,7 +302,7 @@ Ici, on prend la même sélection de variables que sur la troisième sous-partie
 
 ```{r}
 set.seed(0)
-few.rf.model = randomForest(as.formula(paste0("trend ~ ", paste0(colnames(full_data)[-c(1,3,5,6,7,8,10,11,14,16,18,19,21,22)], collapse = " + "))),
+few.rf.model = randomForest(as.formula(paste0("trend ~ ", paste0(colnames(full_data)[-c(1,3,5,6,7,8,10,11,14,16,18,19,21,22,23)], collapse = " + "))),
                              ntree = 5000, mtry = 4,
                              data = train_data)
 ```
@@ -294,3 +312,125 @@ print(paste0("Precision on test data: ", sum(predict(few.rf.model, test_data, ty
 ```
 
 Les résultats sont sensiblement moins bons que dans le cas précédent.
+
+## A présent, essayons plusieurs modèles afin de prédire au mieux le yield.
+Le signe du yield nous indiquera le trend.
+
+L'objectif de cette partie est de tester, successivement : une régression linéaire classique, des random forests, un XGBoost, et un modèle GARCH, puis de les combiner de façon appropriée afin d'avoir la meilleure estimation possible du yield, qui devrait nous donner une bonne estimation du trend.
+
+### Régression linéaire
+```{r}
+full.reglin = lm(as.formula(paste0("yield ~ ", paste0(colnames(full_data)[-c(21,22,23)], collapse = " + "))),,
+                data = train_data)
+
+summary(full.reglin)
+```
+ 
+```{r}
+prediction_vector = rep(NA, nrow(train_data))
+prediction_vector <- predict(full.reglin, train_data, type = "response")
+mean((prediction_vector-train_data$yield)**2)
+
+```
+Evidemment, avec toutes les variables, ce n'est pas terrible.
+Utilisons leaps pour récupérer un subset de variables plus approprié.
+
+```{r}
+library(leaps)
+```
+
+```{r}
+train_data[,-c(3,7, 5,11, 19, 20, 21,22,23)]
+```
+On enlève les variables les moins significatives du modèle global, sinon leaps mettra trop de temps à tester les combinaisons.
+
+```{r}
+#leaps(train_data[,-c(3,7, 5,11, 19, 20,21,22,23)],train_data[,23], int = TRUE, method = "adjr2", nbest = 5)
+```
+
+Ca prend quand même trop de temps... Du coup, faisons un PCA afin de voir quelles variables synthétisent le plus d'information.
+
+```{r}
+library(FactoMineR)
+```
+
+```{r}
+res.PCA <- PCA(train_data[,-c(1,3,7, 5,11, 19, 20,21,22,23)])
+```
+
+```{r}
+summary(res.PCA)
+```
+
+Gardons ces dix variables pour l'instant, puis nous verrons si nous pouvons améliorer le modèle.
+
+```{r}
+reglin2 = lm(yield ~ polarity + post + post.movavg+ log_merit.D1+ post.D1+ polarity_and_log_merit.D1+ gt.bitcoin+ gt.btc + gt.cryptocurrency+ gt.hodl,
+                data = train_data)
+
+summary(reglin2)
+```
+
+```{r}
+reglin3 = lm(yield ~ post + gt.bitcoin+ gt.btc + gt.cryptocurrency+ gt.hodl,
+                data = train_data)
+
+summary(reglin3)
+```
+
+Maintenant, testons ces 3 modèles, afin de voir lequel nous permet d'obtenir les meilleures prédictions en terme de trend.
+
+```{r}
+pred <- test_data[,c(1,23,22)]
+pred['pred_yield_lm1'] <- predict(full.reglin, test_data, type = "response")
+pred['pred_yield_lm2'] <- predict(reglin2, test_data, type = "response")
+pred['pred_yield_lm3'] <- predict(reglin3, test_data, type = "response")
+```
+
+```{r}
+pred['pred_trend_lm1'] <- sign(pred['pred_yield_lm1']+mean_yield)
+pred['pred_trend_lm2'] <- sign(pred['pred_yield_lm2']+mean_yield)
+pred['pred_trend_lm3'] <- sign(pred['pred_yield_lm3']+mean_yield)
+```
+
+```{r}
+pred['trend_int'] <- (pred['trend']=='Down')*-1 + (pred['trend']=='Up')*1 
+```
+
+Voyons la performance de ces modèles sur le trend: 
+```{r}
+sum(pred['pred_trend_lm1']==pred['trend_int'])/length(test_data[,1])
+sum(pred['pred_trend_lm2']==pred['trend_int'])/length(test_data[,1])
+sum(pred['pred_trend_lm3']==pred['trend_int'])/length(test_data[,1])
+```
+On obtient exactement les mêmes réponses pour lm1 et lm2 ; le 3e modèle est renvoie des résultats différents, mais la performance finale est la même...
+Ce n'est pas terrible, la régression logistique paraissait marcher nettement mieux...
+
+### XGboost
+
+```{r}
+library(xgboost)
+```
+
+L'installation du package échoue...
+
+### Garch
+
+```{r}
+library(tseries)
+```
+
+L'installation du package échoue aussi...
+
+```{r}
+library(fGarch)
+```
+```{r}
+gfit <- garchFit(formula = ~ garch(2, 2), data = train_data[,"yield"], cond.dist="norm")
+```
+
+```{r}
+#pred['pred_yield_garch'] <- predict(gfit, test_data[,'yield'], type = "response")
+```
+
+
